[package]
name = "bevy_knyst"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", default-features = false }
knyst = { version = "0.4.0", features = ["cpal"] }

[dev-dependencies]
bevy = { version = "0.10.0", default-features = true }

[profile.dev]
debug-assertions = false